# skill-manager

./: .gitignore  ANNOUNCEMENT.md  CHANGELOG.md  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
skillhub/: __init__.py  cli.py  distribute_bp.py  editor_bp.py  install_bp.py  open_folder.py  skills_bp.py  utils.py
static/css/: app.css
static/js/: app.js  editor.js
templates/: _skill_detail.html  base.html  index.html
tests/: conftest.py  test_api.py  test_utils.py
