[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-manager"
version = "0.2.0"
description = "Web UI to browse, install, distribute, view, and edit Claude Code / OpenCLAW skills locally."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Skill Manager Contributors" }]
keywords = ["claude-code", "openclaw", "skills", "skill-manager", "ai-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "flask>=3.0",
    "chardet>=5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/harrycjs/skill-manager"
Issues = "https://github.com/harrycjs/skill-manager/issues"
Changelog = "https://github.com/harrycjs/skill-manager/blob/main/CHANGELOG.md"

[project.scripts]
# CLI entry reserved for a future release (currently web-only).
skill-manager = "skillhub.cli:main"

[tool.setuptools.packages.find]
include = ["skillhub*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
